Add optional Cloudflared service with replica count control
- Add Cloudflared service to docker-compose.yml with configurable replica count
- Set CLOUDFLARED_REPLICA_COUNT=0 to disable, any other number spawns instances
- Configure Cloudflare tunnel token in .env file
- Enable 1 Cloudflared replica by default
- Connect Cloudflared to home network for secure tunnel access

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,10 @@ PRIVATE_DOMAIN=homeassistant.local
 # Traefik Configuration - UPDATE IF YOUR TRAEFIK USES DIFFERENT ENTRYPOINTS
 TRAEFIK_ENTRYPOINT_WEB=web
 TRAEFIK_ENTRYPOINT_WEB_SECURE=websecure
+
+# Cloudflare Tunnel Configuration (Optional)
+# Set CLOUDFLARE_TUNNEL_TOKEN and CLOUDFLARED_REPLICA_COUNT to enable Cloudflared service
+# Get your token from Cloudflare Zero Trust dashboard
+# Set CLOUDFLARED_REPLICA_COUNT=0 to disable, any other number spawns that many instances
+CLOUDFLARE_TUNNEL_TOKEN=
+CLOUDFLARED_REPLICA_COUNT=0
