Configure both domains to use websecure entrypoint
- Add TLS configuration to private domain router
- Remove unused TRAEFIK_ENTRYPOINT_WEB variable from .env files
- Both public and private domains now use websecure (HTTPS)
- Consistent SSL/TLS configuration across all domain access

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,9 @@ services:
       
       # Traefik Private Domain Configuration
       - "traefik.http.routers.homeassistant-private.rule=Host(`${PRIVATE_DOMAIN}`)"
-      - "traefik.http.routers.homeassistant-private.entrypoints=${TRAEFIK_ENTRYPOINT_WEB}"
+      - "traefik.http.routers.homeassistant-private.entrypoints=${TRAEFIK_ENTRYPOINT_WEB_SECURE}"
       - "traefik.http.routers.homeassistant-private.service=homeassistant-service"
+      - "traefik.http.routers.homeassistant-private.tls=true"
       
       # Service Configuration
       - "traefik.http.services.homeassistant-service.loadbalancer.server.port=${HOMEASSISTANT_PORT}"
