Add Matter Server for Matter device support
- Add Matter Server service with python-matter-server:stable
- Configure Matter Server on port 5580 with persistent data volume
- Connect to home network for Home Assistant integration
- Add configurable logging and port environment variables
- Include comprehensive Matter setup documentation in README
- Fix Cloudflared network connection to use 'home' instead of 'stack'
- Enable Thread/Matter device commissioning through Home Assistant

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ TRAEFIK_ENTRYPOINT_WEB_SECURE=websecure
 # Set CLOUDFLARED_REPLICA_COUNT=0 to disable, any other number spawns that many instances
 CLOUDFLARE_TUNNEL_TOKEN=
 CLOUDFLARED_REPLICA_COUNT=0
+
+# Matter Server Configuration
+MATTER_SERVER_LOG_LEVEL=info
+MATTER_SERVER_PORT=5580
